cluster/apps/homepage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.13.2
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            # Montage individuel des fichiers pour correspondre aux "subPath" de ton template
            - name: config-volume
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: config-volume
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: config-volume
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: config-volume
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
      volumes:
        - name: config-volume
          configMap:
            name: homepage-config
