cluster/apps/homepage/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: homepage
