cluster/apps/homepage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/hostname: "homepage.int.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "192.168.1.251"
spec:
  ingressClassName: nginx-private
  rules:
    - host: homepage.int.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-svc
                port:
                  number: 3000
  tls:
    - hosts:
        - homepage.int.fabsys.ovh
      secretName: homepage-tls
